--- a/src/objects.yml
+++ b/src/objects.yml
@@ -8,6 +8,7 @@ level_manager:
   compose:
     - resource_manager
     - bacteria_controller
+    - flow_controller
     - healthy_cell_controller
 resource_manager:
 input_manager:
@@ -15,6 +16,9 @@ bacteria_controller:
   compose:
     - input_manager
 healthy_cell_controller:
+  compose:
+    - resource_manager
+flow_controller:
   compose:
     - resource_manager
 game_view:
