--- a/src/objects.yml
+++ b/src/objects.yml
@@ -10,12 +10,16 @@ level_manager:
     - bacteria_controller
     - flow_controller
     - healthy_cell_controller
+    - white_cell_controller
 resource_manager:
 input_manager:
 bacteria_controller:
   compose:
     - input_manager
 healthy_cell_controller:
+  compose:
+    - resource_manager
+white_cell_controller:
   compose:
     - resource_manager
 flow_controller:
